tests/Rules/Media/Fixtures/invalid/img_no_alt.html.twig
{# 1 error #}
<img src="photo.jpg">
